# human-zk

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
docs/: README.md  capa-1-matcher.md  capa-2-plataforma.md  funding-audit.md  funding.md  hackathon-real-world-zk.md  migracion-repo-zk.md  pollar-audit.md  pollar-onboarding.md
funding/api/: .env.example  package.json
funding/api/src/: gating.ts  index.ts  sanitize.ts  server.ts  store.ts
identity/: AGENTS.md  README.md
identity/circuits/: README.md
identity/circuits/scripts/: compile.sh
identity/circuits/src/: kyc.circom  poseidon1.circom
identity/contracts/: README.md
identity/issuer/: .env.example  README.md  package.json
identity/issuer/matcher/: README.md  documentCheck.ts  enrollSession.ts  provider.ts  rateLimit.ts  server.ts
identity/issuer/src/: enroll.test.ts  index.ts  pepper.ts  store.ts
platform/: README.md
platform/api/: .env.example  README.md  package.json
platform/circuits/: package-lock.json  package.json
platform/contracts/: README.md
platform/contracts/opinion_board/: Cargo.toml
platform/contracts/opinion_board/src/: lib.rs  test.rs  testdata.rs
platform/curation/: README.md  package.json
scripts/: deploy_platform.sh  e2e-platform.ts
web/: PRODUCT.md  README.md  index.html  package.json  vercel.json  vite.config.ts
web/docs/: CHANGELOG.md  COMPONENTS.md  COPY.md  DESIGN.md  IMPLEMENTATION.md  README.md
web/scripts/: copy-circuit.sh
web/src/: App.test.tsx  App.tsx  FeedPage.test.tsx  main.tsx  vite-env.d.ts
(+172 files in other folders)
